--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.21.0",
+    "@headlessui/react": "^2.2.9",
     "@lottiefiles/dotlottie-react": "^0.6.5",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/form-data": "^2.2.1",
     "@types/formidable": "^3.4.5",
+    "@types/nodemailer": "^7.0.1",
     "@types/react-router-dom": "^5.3.3",
     "aos": "^2.3.4",
     "aws-serverless-express": "^3.4.0",
@@ -25,6 +27,7 @@
     "lucide-react": "^0.400.0",
     "marked": "^16.3.0",
     "next": "^14.0.0",
+    "nodemailer": "^7.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.9.2"
