--- a/backend/package.json
+++ b/backend/package.json
@@ -38,7 +38,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "stripe": "^19.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
