--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,4 +55,25 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   }
+  {
+  "name": "wie_act_esprit",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.14"
+  }
+}
+
 }
